--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.5",
-    "node-sass": "^5.0.0",
+    "sass": "^1.49.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0"
-  },
-  "dependencies": {}
+  }
 }
